# pmc

./: .gitignore  Cargo.toml  DOCS.md  FEATURES.md  Maidfile.toml  README.md  ROLE_SYSTEM.md  SECURITY.md  WEBUI.md  build.rs  opm.service
src/: file.rs  globals.rs  helpers.rs  lib.rs  log.rs  main.rs
src/agent/: connection.rs  messages.rs  mod.rs  registry.rs  types.rs
src/cli/: args.rs  import.rs  internal.rs  mod.rs
src/config/: mod.rs  structs.rs
src/daemon/: fork.rs  log.rs  mod.rs  pid.rs
src/daemon/api/: docs.rs  mod.rs  routes.rs  websocket.rs
src/daemon/static/: app.css  app.html  app.js  index.html
src/notifications/: mod.rs
src/process/: dump.rs  http.rs  mod.rs
src/process/unix/: cpu.rs  mod.rs  process_info.rs
src/webui/: mod.rs  package-lock.json  package.json
src/webui/src/: api.ts  consts.ts  helpers.ts  styles.css
src/webui/src/components/: base.astro  navbar.astro
src/webui/src/components/react/: agent-detail.tsx  header.tsx  index.tsx  inline-rename.tsx  login.tsx  modal.tsx  notifications.tsx  rename.tsx  servers.tsx  toast.tsx  useToast.tsx  view.tsx
src/webui/src/pages/: agent-detail.astro  docs.astro  index.astro  notifications.astro  servers.astro  status.astro  view.astro
