[package]
name = "opm"
version = "2.0.0"
edition = "2024"
license = "MIT"
repository = "https://lab.themackabu.dev/self/opm"
description = "OPM is a simple and easy to use PM2 alternative"

[[bin]]
name = "opm"
path = "src/main.rs"

[build-dependencies]
tar = "0.4.43"
chrono = "0.4.38"
flate2 = "1.0.35"

[build-dependencies.reqwest]
version = "0.12.12"
default-features = false
features = [
   "blocking", 
   "rustls-tls", 
]

[dependencies]
ron = "0.8.1"
log = "0.4.22"
home = "0.5.9"
ryu = "1.0.18"
toml = "0.8.19"
clap = "4.5.23"
cxx = "1.0.140"
bytes = "1.9.0"
tera = "1.20.0"
regex = "1.11.1"
libc = "0.2.169"
anyhow = "1.0.95"
colored = "2.2.0"
inquire = "0.7.5"
hcl-rs = "0.18.0"
os_info = "3.9.0"
macros-rs = "0.5.2"
termcolor = "1.4.1"
once_cell = "1.20.2"
env_logger = "0.11.6"
merkle_hash = "3.7.0"
lazy_static = "1.5.0"
prometheus = "0.13.4"
include_dir = "0.7.4"
serde_json = "1.0.134"
simple-logging = "2.0.2"
update-informer = "1.1.0"
pretty_env_logger = "0.5.0"
utoipa-swagger-ui = "5.0.0"
clap-verbosity-flag = "2.2.2"
global_placeholders = "0.1.0"
num_cpus = "1.16.0"
dotenvy = "0.15.7"
uuid = { version = "1.11.0", features = ["v4", "serde"] }
hostname = "0.4.0"
tokio-tungstenite = "0.24.0"
futures-util = "0.3.31"
notify-rust = "4.11.7"

tokio = { version = "1.42.0", features = ["full"] }
rocket = { version = "0.5.1", features = ["json"] }

tabled = { version = "0.17.0", features = ["ansi"] }
chrono = { version = "0.4.38", features = ["serde"] }
serde = { version = "1.0.216", features = ["derive"] }
nix = { version = "0.29.0", features = ["process", "signal"] }
utoipa = { version = "4.2.3", features = ["serde_yaml", "non_strict_integers"] }


[dependencies.reqwest]
version = "0.12.12"
default-features = false
features = [
   "blocking", 
   "json", 
   "rustls-tls", 
]
